--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-This is index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hela Nomad</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
+      background-color: #0b0b0c;
+      color: #f6f7f8;
+      text-align: center;
+    }
+    header img {
+      width: 100%;
+      height: auto;
+      display: block;
+      max-height: 75vh;
+      object-fit: cover;
+    }
+    h1 {
+      font-size: 1.6rem;
+      margin: 20px 0 10px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+    }
+    nav {
+      margin-top: 14px;
+      display: flex;
+      justify-content: center;
+      gap: 18px;
+      flex-wrap: wrap;
+    }
+    .icon {
+      width: 36px;
+      height: 36px;
+      fill: #f6f7f8;
+      opacity: 0.85;
+      transition: transform 0.15s ease, opacity 0.15s ease;
+    }
+    a:hover .icon {
+      transform: translateY(-2px);
+      opacity: 1;
+    }
+    footer {
+      margin: 30px 0 20px;
+      font-size: 0.8rem;
+      color: #a9adb3;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="images/cover.jpg" alt="Hela Nomad cover photo" />
+  </header>
+
+  <main>
+    <h1>🙏 ආයුබෝවන් | வணக்கம் 🙏</h1>
+
+    <nav>
+      <!-- YouTube -->
+      <a href="https://www.youtube.com/@helanomad" target="_blank" rel="noopener" aria-label="YouTube">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M23.5 6.2a4 4 0 0 0-2.8-2.8C18.7 3 12 3 12 3s-6.7 0-8.7.4A4 4 0 0 0 .5 6.2 41.5 41.5 0 0 0 0 12a41.5 41.5 0 0 0 .5 5.8 4 4 0 0 0 2.8 2.8C5.3 21 12 21 12 21s6.7 0 8.7-.4a4 4 0 0 0 2.8-2.8c.3-1.9.5-3.8.5-5.8s-.2-3.9-.5-5.8zM9.7 15.5v-7l6 3.5-6 3.5z"/></svg>
+      </a>
+
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/helanomad" target="_blank" rel="noopener" aria-label="Instagram">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M12 2.2c3.2 0 3.6 0 4.8.1 1.2.1 1.9.2 2.6.5.7.3 1.3.6 1.9 1.2.6.6.9 1.2 1.2 1.9.3.7.4 1.4.5 2.6.1 1.2.1 1.6.1 4.8s0 3.6-.1 4.8c-.1 1.2-.2 1.9-.5 2.6-.3.7-.6 1.3-1.2 1.9-.6.6-1.2.9-1.9 1.2-.7.3-1.4.4-2.6.5-1.2.1-1.6.1-4.8.1s-3.6 0-4.8-.1c-1.2-.1-1.9-.2-2.6-.5a5.1 5.1 0 0 1-1.9-1.2 5.1 5.1 0 0 1-1.2-1.9c-.3-.7-.4-1.4-.5-2.6C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.8c.1-1.2.2-1.9.5-2.6.3-.7.6-1.3 1.2-1.9.6-.6 1.2-.9 1.9-1.2.7-.3 1.4-.4 2.6-.5C8.4 2.2 8.8 2.2 12 2.2z"/></svg>
+      </a>
+
+      <!-- Medium -->
+      <a href="https://helanomad.medium.com" target="_blank" rel="noopener" aria-label="Medium">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M3 6.5c0-.3 0-.4.3-.4h4.6l3.9 8.4 3.4-8.4h4.5c.2 0 .3.1.2.3l-1.9 3.4c-.1.2-.1.4 0 .6l2.7 4.8c.1.2 0 .3-.2.3h-4.1c-.1 0-.2-.1-.2-.2l-1.9-3.4c-.1-.2-.3-.2-.4 0l-2.2 5.5c-.1.2-.2.2-.3 0L6.9 6.1 5 16.9c0 .2-.1.3-.3.3H1.9c-.2 0-.3-.1-.3-.3L3 6.5z"/></svg>
+      </a>
+
+      <!-- Facebook -->
+      <a href="https://www.facebook.com/helanomad" target="_blank" rel="noopener" aria-label="Facebook">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M13.5 21.9v-8.6h2.9l.4-3.3h-3.3V8.1c0-1 .3-1.6 1.7-1.6h1.8V3.5c-.3 0-1.3-.1-2.4-.1-2.3 0-3.9 1.4-3.9 4v2.2H8.2v3.3h2.5v8.6h2.8z"/></svg>
+      </a>
+    </nav>
+  </main>
+
+  <footer>© 2025 Hela Nomad</footer>
+</body>
+</html>
