fix image file path

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <header>
-    <img src="images/cover.jpg" alt="Hela Nomad cover photo" />
+    <img src="images/cover.png" alt="Hela Nomad cover photo" />
   </header>
 
   <main>
