--- a/index.html
+++ b/index.html
@@ -7,100 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@100..900&family=Noto+Serif+Sinhala:wght@100..900&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
-      background-color: #ffffff;
-      color: #f6f7f8;
-      text-align: center;
-    }
-    header img {
-      width: 100%;
-      height: auto;
-      display: block;
-      max-height: 30vh;
-      object-fit: cover;
-    }
-    h1 {
-      font-size: 3.0rem;
-      margin: 20px 0 10px;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      color: #003060;
-    }
-    nav {
-      margin-top: 14px;
-      display: flex;
-      justify-content: center;
-      gap: 18px;
-      flex-wrap: wrap;
-    }
-    .icon {
-      width: 36px;
-      height: 36px;
-      fill: #f6f7f8;
-      opacity: 0.85;
-      transition: transform 0.15s ease, opacity 0.15s ease;
-    }
-    a:hover .icon {
-      transform: translateY(-2px);
-      opacity: 1;
-    }
-    footer {
-      margin: 30px 0 20px;
-      font-size: 0.8rem;
-      color: #a9adb3;
-    }
-    .noto-serif-sinhala-welcome {
-      font-family: "Noto Serif Sinhala", serif;
-      font-optical-sizing: auto;
-      font-weight: 600;
-      font-style: normal;
-      font-variation-settings: "wdth" 100;
-    }
-    .noto-sans-tamil-welcome {
-      font-family: "Noto Sans Tamil", sans-serif;
-      font-optical-sizing: auto;
-      font-weight: 600;
-      font-style: normal;
-      font-variation-settings: "wdth" 100;
-    }
 
-    .social-icons {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 14px;               /* space between icons */
-      margin-top: 14px;
-      flex-wrap: wrap;
-    }
-
-    .social-icons__link {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 44px;
-      height: 44px;
-      color: #f6f7f8;          /* icon color (via currentColor) */
-      border: 1px solid rgba(255,255,255,.18);
-      border-radius: 12px;
-      transition: transform .15s ease, border-color .15s ease, opacity .15s ease;
-      text-decoration: none;
-      opacity: .92;
-    }
-
-    .social-icons__link:hover {
-      transform: translateY(-2px);
-      border-color: rgba(255,255,255,.32);
-      opacity: 1;
-    }
-
-    .social-icons__link svg {
-      width: 24px;
-      height: 24px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -148,6 +56,6 @@
     </nav>
   </main>
 
-  <footer>© 2025 Hela Nomad</footer>
+  <footer>© 2025 Hela Nomad • Made with <span class="heart">❤️</span> in Sri Lanka</footer>
 </body>
 </html>
