--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hela Nomad</title>
+
+  <title>Hela Nomad | In Search of Helese</title>
+  <meta name="description" content="The official home of Hela Nomad — exploring culture, history, and journeys across Sri Lanka and beyond." />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@100..900&family=Noto+Serif+Sinhala:wght@100..900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
+  <!-- Open Graph (social sharing) -->
+  <meta property="og:title" content="Hela Nomad | In Search of Helese" />
+  <meta property="og:description" content="Exploring Sri Lanka’s culture, history, and timeless journeys — In Search of Helese." />
+  <meta property="og:image" content="https://helanomad.com/images/logo.png" />
+  <meta property="og:url" content="https://helanomad.com" />
+  <meta property="og:type" content="website" />
 </head>
 <body>
   <header>
