--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="Hela Nomad explores Sri Lankan heritage, history, language, and landscapes through documentaries, essays, and digital tools." />
-  <link rel="icon" href="/favicon.png" />
+  <link rel="icon" href="/favicon.ico" />
 
   <!-- Optional: Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
