add og, twitter meta

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     content="Hela Nomad explores Sri Lankan heritage, history, language, and landscapes through documentaries, essays, and digital tools." />
   <link rel="icon" href="/favicon.ico" />
 
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Hela Nomad">
+  <meta property="og:url" content="https://helanomad.com/">
+  <meta property="og:title" content="Hela Nomad | In Search of Helese">
+  <meta property="og:description"
+    content="Hela Nomad explores Sri Lankan heritage, history, language, and landscapes through documentaries, essays, and digital tools.">
+  <meta property="og:image" content="https://helanomad.com/images/og/helanomad-og.png">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://helanomad.com/">
+  <meta name="twitter:title" content="Hela Nomad | In Search of Helese">
+  <meta name="twitter:description"
+    content="Hela Nomad explores Sri Lankan heritage, history, language, and landscapes through documentaries, essays, and digital tools.">
+  <meta name="twitter:image" content="https://helanomad.com/images/og/helanomad-og.png">
+
   <!-- Optional: Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
