--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Hela Nomad | In Search of Helese">
   <meta property="og:description"
     content="Hela Nomad explores Sri Lankan heritage, history, language, and landscapes through documentaries, essays, and digital tools.">
-  <meta property="og:image" content="https://helanomad.com/images/og/helanomad-og.png">
+  <meta property="og:image" content="https://helanomad.com/images/logo.png">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
   <meta name="twitter:title" content="Hela Nomad | In Search of Helese">
   <meta name="twitter:description"
     content="Hela Nomad explores Sri Lankan heritage, history, language, and landscapes through documentaries, essays, and digital tools.">
-  <meta name="twitter:image" content="https://helanomad.com/images/og/helanomad-og.png">
+  <meta name="twitter:image" content="https://helanomad.com/images/logo.png">
 
   <!-- Optional: Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
